jACBrFramework/jACBrFramework/src/jACBrFramework/interop/ECFInterop.java


	/**
	 * Original signature : <code>int ECF_GetDataHoraSB(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 245</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetDataHoraSB(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_GetDataHoraSB(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	int ECF_GetDataHoraSB(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_GetDataMovimento(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 246</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetDataMovimento(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_GetDataMovimento(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	int ECF_GetDataMovimento(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_GetDecimaisPreco(const INTPTR)</code><br>
	 * <i>native declaration : line 247</i>
	 */
	int ECF_GetDecimaisPreco(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetDecimaisQtd(const INTPTR)</code><br>
	 * <i>native declaration : line 248</i>
	 */
	int ECF_GetDecimaisQtd(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetDescricaoGrande(const INTPTR)</code><br>
	 * <i>native declaration : line 249</i>
	 */
	int ECF_GetDescricaoGrande(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetEmLinha(const INTPTR, const int)</code><br>
	 * <i>native declaration : line 250</i>
	 */
	int ECF_GetEmLinha(int ecfHandle, int timeOut);
	/**
	 * Original signature : <code>int ECF_GetEstado(const INTPTR)</code><br>
	 * <i>native declaration : line 251</i>
	 */
	int ECF_GetEstado(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetFormaPagamento(const INTPTR, FormaPagamentoRec*, const int)</code><br>
	 * <i>native declaration : line 252</i>
	 */
	int ECF_GetFormaPagamento(int ecfHandle, FormaPagamentoRec formaPagamento, int index);
	/**
	 * Original signature : <code>int ECF_GetFPGCount(const INTPTR, int*)</code><br>
	 * <i>native declaration : line 253</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetFPGCount(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #ECF_GetFPGCount(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	int ECF_GetFPGCount(int ecfHandle, IntByReference value);
	/**
	 * Original signature : <code>int ECF_GetFPGCount(const INTPTR, int*)</code><br>
	 * <i>native declaration : line 253</i>
	 */
	int ECF_GetFPGCount(int ecfHandle, IntBuffer value);
	/**
	 * Original signature : <code>int ECF_GetGavetaAberta(const INTPTR)</code><br>
	 * <i>native declaration : line 254</i>
	 */
	int ECF_GetGavetaAberta(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetGavetaSinalInvertido(const INTPTR)</code><br>
	 * <i>native declaration : line 255</i>
	 */
	int ECF_GetGavetaSinalInvertido(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetGrandeTotal(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 256</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetGrandeTotal(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_GetGrandeTotal(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_GetGrandeTotal(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_GetGrandeTotal(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 256</i>
	 */
	int ECF_GetGrandeTotal(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_GetHorarioVerao(const INTPTR)</code><br>
	 * <i>native declaration : line 257</i>
	 */
	int ECF_GetHorarioVerao(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetIdentificaConsumidorRodape(const INTPTR)</code><br>
	 * <i>native declaration : line 258</i>
	 */
	int ECF_GetIdentificaConsumidorRodape(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetIE(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 259</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetIE(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetIE(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetIE(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetIE(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 259</i>
	 */
	int ECF_GetIE(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetIgnorarTagsFormatacao(const INTPTR)</code><br>
	 * <i>native declaration : line 260</i>
	 */
	int ECF_GetIgnorarTagsFormatacao(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetIM(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 261</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetIM(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetIM(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetIM(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetIM(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 261</i>
	 */
	int ECF_GetIM(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetIntervaloAposComando(const INTPTR)</code><br>
	 * <i>native declaration : line 262</i>
	 */
	int ECF_GetIntervaloAposComando(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetLinhasEntreCupons(const INTPTR)</code><br>
	 * <i>native declaration : line 263</i>
	 */
	int ECF_GetLinhasEntreCupons(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetMaxLinhasBuffer(const INTPTR)</code><br>
	 * <i>native declaration : line 264</i>
	 */
	int ECF_GetMaxLinhasBuffer(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetMemoParams(const INTPTR, PCHAR, const int, const int)</code><br>
	 * <i>native declaration : line 265</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetMemoParams(com.sun.jna.Pointer, java.nio.ByteBuffer, int, int)} and {@link #ECF_GetMemoParams(com.sun.jna.Pointer, com.sun.jna.Pointer, int, int)} instead
	 */
	@Deprecated 
	int ECF_GetMemoParams(int ecfHandle, Pointer linha, int bufferLen, int index);
	/**
	 * Original signature : <code>int ECF_GetMemoParams(const INTPTR, PCHAR, const int, const int)</code><br>
	 * <i>native declaration : line 265</i>
	 */
	int ECF_GetMemoParams(int ecfHandle, ByteBuffer linha, int bufferLen, int index);
	/**
	 * Original signature : <code>int ECF_GetMemoParamsLineCount(const INTPTR)</code><br>
	 * <i>native declaration : line 266</i>
	 */
	int ECF_GetMemoParamsLineCount(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetMFAdicional(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 267</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetMFAdicional(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetMFAdicional(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetMFAdicional(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetMFAdicional(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 267</i>
	 */
	int ECF_GetMFAdicional(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetMFD(const INTPTR)</code><br>
	 * <i>native declaration : line 268</i>
	 */
	int ECF_GetMFD(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetModelo(const INTPTR)</code><br>
	 * <i>native declaration : line 269</i>
	 */
	int ECF_GetModelo(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetModeloStr(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 270</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetModeloStr(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetModeloStr(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetModeloStr(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetModeloStr(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 270</i>
	 */
	int ECF_GetModeloStr(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumCCF(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 271</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetNumCCF(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetNumCCF(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetNumCCF(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumCCF(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 271</i>
	 */
	int ECF_GetNumCCF(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumCDC(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 272</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetNumCDC(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetNumCDC(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetNumCDC(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumCDC(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 272</i>
	 */
	int ECF_GetNumCDC(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumCOO(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 273</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetNumCOO(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetNumCOO(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetNumCOO(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumCOO(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 273</i>
	 */
	int ECF_GetNumCOO(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumCOOInicial(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 274</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetNumCOOInicial(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetNumCOOInicial(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetNumCOOInicial(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumCOOInicial(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 274</i>
	 */
	int ECF_GetNumCOOInicial(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumCRO(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 275</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetNumCRO(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetNumCRO(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetNumCRO(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumCRO(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 275</i>
	 */
	int ECF_GetNumCRO(int ecfHandle, ByteBuffer buffer, int bufferLen);
